--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <h1 class="logocol col-md-6" align="center">
-            <a id="logo" href="#"><strong>KITCHEN CLUB®</strong></a>
+            <a id="logo" href="https://damiusgreen.github.io/ecommerce_site/#/"><strong>KITCHEN CLUB®</strong></a>
         </h1>
         <div class="col-md-3">
           <!--Account Icons-->
